Fixed text alignment.

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ body {
     width:95%;
     min-width: 300px;
     overflow:auto;
+    text-align: left;
 }
 th, td {
     vertical-align: text-top;
